--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <div class="display-label">副显示器1 - 8K</div>
                         <div class="video-container">
                             <iframe class="video-embed" 
-                                    src="https://www.youtube.com/embed/3FdY6vrK4y8?autoplay=1&mute=1&loop=1&playlist=3FdY6vrK4y8&controls=0&showinfo=0&rel=0&modestbranding=1"
+                                    src="https://www.youtube.com/embed/AY5qcIq5u2g?autoplay=1&mute=1&loop=1&playlist=AY5qcIq5u2g&controls=0&showinfo=0&rel=0&modestbranding=1"
                                     allowfullscreen>
                             </iframe>
                         </div>
