--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     <div class="display-label">主显示器 - 8K (7680×4320)</div>
                     <div class="video-container">
                         <iframe class="video-embed" 
-                                src="https://www.youtube.com/embed/Y7jDh7aOQCY?autoplay=1&mute=1&loop=1&playlist=Y7jDh7aOQCY&controls=0&showinfo=0&rel=0&modestbranding=1"
+                                src="https://www.youtube.com/embed/QqI9eKQnFL4?autoplay=1&mute=1&loop=1&playlist=QqI9eKQnFL4&controls=0&showinfo=0&rel=0&modestbranding=1"
                                 allowfullscreen>
                         </iframe>
                     </div>
@@ -422,7 +422,7 @@
                         <div class="display-label">副显示器1 - 8K</div>
                         <div class="video-container">
                             <iframe class="video-embed" 
-                                    src="https://www.youtube.com/embed/AY5qcIq5u2g?autoplay=1&mute=1&loop=1&playlist=AY5qcIq5u2g&controls=0&showinfo=0&rel=0&modestbranding=1"
+                                    src="https://www.youtube.com/embed/G5RpJwCJDqc?autoplay=1&mute=1&loop=1&playlist=G5RpJwCJDqc&controls=0&showinfo=0&rel=0&modestbranding=1"
                                     allowfullscreen>
                             </iframe>
                         </div>
@@ -431,7 +431,7 @@
                         <div class="display-label">副显示器2 - 8K</div>
                         <div class="video-container">
                             <iframe class="video-embed" 
-                                    src="https://www.youtube.com/embed/Y7jDh7aOQCY?autoplay=1&mute=1&loop=1&playlist=Y7jDh7aOQCY&controls=0&showinfo=0&rel=0&modestbranding=1"
+                                    src="https://www.youtube.com/embed/hin4n57gPUc?autoplay=1&mute=1&loop=1&playlist=hin4n57gPUc&controls=0&showinfo=0&rel=0&modestbranding=1"
                                     allowfullscreen>
                             </iframe>
                         </div>
