--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     <div class="display-label">主视频流 - 1080P</div>
                     <div class="video-container">
                         <iframe class="video-embed" 
-                                src="https://www.youtube.com/embed/TdpBRZ0dZhw?autoplay=1&mute=1&loop=1&playlist=TdpBRZ0dZhw&controls=1&showinfo=0&rel=0"
+                                src="https://www.youtube.com/embed/HmZKgaHa3Fg?autoplay=1&mute=1&loop=1&playlist=HmZKgaHa3Fg&controls=1&showinfo=0&rel=0"
                                 allowfullscreen>
                         </iframe>
                     </div>
@@ -499,7 +499,7 @@
             <div class="mobile-video">
                 <div class="display-label">1080P视频流</div>
                 <iframe class="video-embed" 
-                        src="https://www.youtube.com/embed/TdpBRZ0dZhw?autoplay=1&mute=1&loop=1&playlist=TdpBRZ0dZhw&controls=0&showinfo=0&rel=0"
+                        src="https://www.youtube.com/embed/HmZKgaHa3Fg?autoplay=1&mute=1&loop=1&playlist=HmZKgaHa3Fg&controls=0&showinfo=0&rel=0"
                         allowfullscreen>
                 </iframe>
             </div>
@@ -526,7 +526,7 @@
             <div class="wearable-screen">
                 <div class="display-label">720P实时视频</div>
                 <iframe class="video-embed" 
-                        src="https://www.youtube.com/embed/TdpBRZ0dZhw?autoplay=1&mute=1&loop=1&playlist=TdpBRZ0dZhw&controls=0&showinfo=0&rel=0"
+                        src="https://www.youtube.com/embed/1-cXBiyyIjA?autoplay=1&mute=1&loop=1&playlist=1-cXBiyyIjA&controls=0&showinfo=0&rel=0"
                         allowfullscreen>
                 </iframe>
             </div>
