--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     <div class="display-label">主视频流 - 1080P</div>
                     <div class="video-container">
                         <iframe class="video-embed" 
-                                src="https://www.youtube.com/embed/HmZKgaHa3Fg?autoplay=1&mute=1&loop=1&playlist=HmZKgaHa3Fg&controls=1&showinfo=0&rel=0"
+                                src="https://www.youtube.com/embed/H9vevyszht4?autoplay=1&mute=1&loop=1&playlist=H9vevyszht4&controls=1&showinfo=0&rel=0"
                                 allowfullscreen>
                         </iframe>
                     </div>
@@ -499,7 +499,7 @@
             <div class="mobile-video">
                 <div class="display-label">1080P视频流</div>
                 <iframe class="video-embed" 
-                        src="https://www.youtube.com/embed/HmZKgaHa3Fg?autoplay=1&mute=1&loop=1&playlist=HmZKgaHa3Fg&controls=0&showinfo=0&rel=0"
+                        src="https://www.youtube.com/embed/H9vevyszht4?autoplay=1&mute=1&loop=1&playlist=H9vevyszht4&controls=0&showinfo=0&rel=0"
                         allowfullscreen>
                 </iframe>
             </div>
