--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <div class="wearable-screen">
                 <div class="display-label">720P实时视频</div>
                 <iframe class="video-embed" 
-                        src="https://www.youtube.com/embed/1-cXBiyyIjA?autoplay=1&mute=1&loop=1&playlist=1-cXBiyyIjA&controls=0&showinfo=0&rel=0"
+                        src="https://www.youtube.com/embed/ohT3cymyH0I?autoplay=1&mute=1&loop=1&playlist=ohT3cymyH0I&controls=0&showinfo=0&rel=0"
                         allowfullscreen>
                 </iframe>
             </div>
