--- a/index.html
+++ b/index.html
@@ -444,13 +444,13 @@
     <!-- 工作站终端 -->
     <div id="workstation" class="terminal-display">
         <div class="workstation">
-            <div class="hub-title">💻 支援医院 - 医生工作站 (1080P)</div>
+            <div class="hub-title">💻 支援医院 - 医生工作站 (4K)</div>
             <div class="workstation-grid">
                 <div class="workstation-panel">
-                    <div class="display-label">主视频流 - 1080P</div>
+                    <div class="display-label">主视频流 - 4K</div>
                     <div class="video-container">
                         <iframe class="video-embed" 
-                                src="https://www.youtube.com/embed/H9vevyszht4?autoplay=1&mute=1&loop=1&playlist=H9vevyszht4&controls=1&showinfo=0&rel=0"
+                                src="https://www.youtube.com/embed/eOwnmdXiIsA?autoplay=1&mute=1&loop=1&playlist=eOwnmdXiIsA&controls=1&showinfo=0&rel=0"
                                 allowfullscreen>
                         </iframe>
                     </div>
